# fastapi-exception-responses

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pre-commit-config.yml  pyproject.toml
src/fastapi_exception_responses/: __init__.py  core.py
src/fastapi_responses/: __init__.py  core.py
tests/: conftest.py  test_core.py  tests.py  utils.py
