[project]
name = "fastapi-responses"
version = "0.1.0"
description = ""
authors = [
    {name = "max31ru12",email = "maxevg72@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette (>=0.46.2,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
faker = "^37.1.0"

